fix: 서버 URL을 개발 환경 주소로 업데이트 (개발용 서버 URL 변경)